# Babel

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  export_path  install.sh
UML/BABEL/: 128002.diagram  130562  134530.diagram  134658.diagram  141186.diagram  2.session  23.session  BABEL.prj  cpp_includes  generation_settings
UML/BABEL/cpp/includes/: DecodedSound.hpp  EncodedSound.hpp  IAudio.hpp  ICompressor.hpp  INetwork.hpp  Opus.hpp  PaInput.hpp  PaOutput.hpp
UML/BABEL/cpp/sources/: DecodedSound.cpp  EncodedSound.cpp  IAudio.cpp  ICompressor.cpp  INetwork.cpp  Opus.cpp  PaInput.cpp  PaOutput.cpp
configure/: export_path  install.sh
includes/client/: Core.hpp  DecodedSound.hpp  EncodedSound.hpp  IAudio.hpp  ICompressor.hpp  INetwork.hpp  Opus.hpp  PaInput.hpp  PaOutput.hpp  PortAudio.hpp  Settings.hpp  SoundDeviceSettings.hpp  client.hpp
includes/client/Network/: NetworkConfig.hpp  TCPNetwork.hpp  UDPNetwork.hpp
includes/client/UI/: Call.hpp  Home.hpp  Login.hpp
includes/common/: Factory.hpp  IObservable.hpp  IObservateur.hpp  PrintVector.hpp
includes/server/: Client.hpp  Server.hpp  server.hpp
media/: stylesheet.qss
sources/client/: Core.cpp  Core.hpp  Opus.cpp  PaInput.cpp  PaOutput.cpp  PortAudio.cpp  Settings.cpp  main.cpp
sources/client/Network/: TCPNetwork.cpp  UDPNetwork.cpp
sources/client/UI/: Call.cpp  Home.cpp  Login.cpp
sources/common/: Factory.cpp  IObservable.cpp  PrintVector.cpp
sources/server/: Client.cpp  Server.cpp  log_funcs.cpp  main.cpp  server.cpp  server_commands.cpp
